[project]
name = "the-purge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Piotr Zakrzewski", email = "1050269+PiotrZakrzewski@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "jupyterlab>=4.5.1",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
]
